--- a/index.html
+++ b/index.html
@@ -3,20 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
+    <style>
+    	ul {
+    		list-style-type: none;
+    		margin: 0;
+    		padding: 0;
+    	}
+         li {
+         	float: right;
+         	margin: 0 0 100px 10px;
+         	
+
+
+         }
+    </style>
   </head>
   <body>
+  <nav>
+   <ul>
+   	<li><a href="gallery">gallery</a></li>
+    <li><a href="bio">Bio</a></li>
+    <li><a href="https://www.yahoo.com/">Contact</a></li>
+    <li><a href="home">Home</a></li>
+   </ul>
+   </nav
   <h1>Ronald<br>
    Gordon<h1>
    <img src="308.jpg">
    <h2>Junior<br>
    Web Developer</h2>
-   <nav>
-   <ul>
-   	<li><a href="home">Home</a></li>
-    <li><a href="home">Bio</a></li>
-    <li><a href="https://www.yahoo.com/">Contact</a></li>
-    <li><a href="home">Gallery</a></li>
-   </ul>
-   </nav>  
+   >  
   </body>
 </html>
